--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ h4 {
 
 p {
 	line-height: 36px;
+	font-size: 1rem;
 }
 
 /******** HEADER STYLES ********/
@@ -57,7 +58,7 @@ header {
 
 header h1 {
 	margin: 0;
-	padding: 38px 0;
+	padding: 38px 0 20px 0;
 	width: 100%;
 	border-bottom: 3px solid #77A466;
 }
@@ -73,6 +74,7 @@ header nav {
 header nav ul {
 	margin: 0;
 	padding: 0;
+	list-style: none;
 }
 
 header nav ul li {
@@ -81,7 +83,6 @@ header nav ul li {
 	text-transform: uppercase;
 	padding: 10px 0px;
 	width: 100%;
-	list-style: none;
 }
 
 header nav ul li a {
@@ -111,10 +112,6 @@ header nav ul li a {
 	justify-content: center;
 }
 
-.content-wrapper {
-	width: 90%;
-}
-
 .bottom-section .content-wrapper {
 	border-top: 5px solid #EEE;
 	border-bottom: 5px solid #EEE;
@@ -123,19 +120,21 @@ header nav ul li a {
 .section-one,
 .section-two,
 .section-three {
-	padding: 0 40px;
-	width: 100%;
+	box-sizing: border-box;
 }
 
 .section-one {
+	width: 100%;
 }
 
 .section-two {
+	width: 100%;
 	border-top: 5px solid #EEE;
 	border-bottom: 5px solid #EEE;
 }
 
 .section-three {
+	width: 100%;
 }
 
 .bottom-section h3 {
@@ -167,4 +166,58 @@ footer span {
 	text-transform: lowercase;
 	color: #45610E;
 	font-size: 14px;
+}
+
+/*****TABLET MEDIA QUERY *****/
+
+@media all and (min-width: 768px) {
+    .bottom-section .content-wrapper {
+		justify-content: space-evenly;
+	}
+
+	.section-one {
+		width: 26%;
+	}
+
+	.section-two {
+		width: 40%;
+		border-left: 5px solid #EEE;
+		border-right: 5px solid #EEE;
+		border-top: none;
+		border-bottom: none;
+		padding: 0px 30px;
+	}
+	
+	.section-three {
+		width: 26%;
+	}
+}
+ 
+/***** DESKTOP MEDIA QUERY *****/
+@media all and (min-width: 1200px) {
+    body {
+		font-size: 1em;
+	}
+
+	header .content-wrapper {
+		justify-content: space-between;
+		align-items: center;
+		padding: 20px 0px;
+	}
+
+	header h1 {
+		width: 30%;
+		padding: 0;
+		border-bottom: none;
+		text-align: left;
+	}
+
+	header nav {
+		width: 25%;
+	}
+
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
 }
